--- a/templates/template.html
+++ b/templates/template.html
@@ -3,17 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Jogoteca</title>
+		<title>Your Cont Admin</title>
 		<link rel="stylesheet" href={{ url_for('static', filename='css/bootstrap.css') }}>
 	</head>
 	<body class="container">
 		<header>
 			<nav>
 				<a href="/">Home</a>
-				<a href="/escrever_email1">Boas Vindas</a>
+				<a href="/welcome_to_your_cont">Boas Vindas</a>
             </nav>
 		</header>
-		{% block conteudo %}{% endblock %}
+		{% block conteudo %}
+		{% endblock %}
 		<script src="../static/js/jquery.js" type="text/javascript"></script>
 		<script src="../static/js/popper.js" type="text/javascript"></script>
 		<script src="../static/js/bootstrap.js" type="text/javascript"></script>
