adiciona biblioteca de teste e de dotenv loader adicona facilitador para carregar os templates de email adiciona envio de email a partir do post

--- a/templates/welcome_to_your_cont.html
+++ b/templates/welcome_to_your_cont.html
@@ -7,11 +7,11 @@
       <form form action="welcome_to_your_cont" method="post">
         <fieldset>
           <div class="form-group">
-            <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" class="form-control">
+            <label for="name">Nome</label>
+            <input type="text" id="name" name="name" class="form-control">
           </div>
           <div class="form-group">
-            <label for="nome">Email</label>
+            <label for="email">Email</label>
             <input type="email" id="email" name="email" class="form-control">
           </div>
           <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
