cria novo modulo de envio de email

--- a/templates/email/contact_for_contract_data.html
+++ b/templates/email/contact_for_contract_data.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body style="background-color: #f6f6f6; color: #5a5c60; font-family: 'Helvetica Neue',Helvetica, Arial, sans-serif; font-size: 16px; height: 100%; line-height: 1.6; padding: 0px;">
-		<div id="maindiv" style="align-content: center; box-sizing: border-box; font-size: 14px; margin: 0px auto; min-height: 100%; padding-bottom: 1em; position: relative; width: 700px;">
+		<div id="maindiv" style="align-content: center; box-sizing: border-box; font-size: 14px; margin: 0px auto; min-height: 100%; padding-bottom: 1em; position: relative; width: 700px !important;">
 			<header style="background-color: #f6f6f6; padding: 20px;">
 				<img alt src="cid:file.jpg" style="height: auto; width: 100%;">
 				<img alt src="../../../static/img/file.jpg" style="height: auto; width: 100%;">
