--- a/templates/email/styled/contact_for_contract_data.html
+++ b/templates/email/styled/contact_for_contract_data.html
@@ -22,6 +22,8 @@
 				background-color: #f6f6f6;
 				padding: 20px;
 			}
+			.logo{
+			}
 			article{
 				background-color: #f6f6f6;
 				padding: 20px;
@@ -36,7 +38,7 @@
 				min-height: 100%;
 				margin:0px auto;
 				align-content: center;
-				width: 700px;
+				width: 700px !important;;
 			}
 
 			.usuario_destacado{
@@ -45,6 +47,7 @@
 			}
 
 			footer{
+				width: 700px;
 				background-color: #5f0b8a;
 				padding: 20px;
 				position: absolute;
