--- a/templates/email/styled/welcome_to_your_cont.html
+++ b/templates/email/styled/welcome_to_your_cont.html
@@ -5,10 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>{0}</title>
 		<style>
-			html, head{
-				margin: 0;
-				height: 100%;
-			}
+			html, head{ margin: 0; height: 100%; }
 			body{
 				background-color:#f6f6f6;
 				color: #5a5c60;
@@ -18,16 +15,8 @@
 				line-height:1.6;
 				padding:0px;
 				}
-			header{
-				background-color: #f6f6f6;
-				padding: 20px;
-			}
-			article{
-				background-color: #f6f6f6;
-				padding: 20px;
-				font-size: 16px;
-				margin-bottom: 100px;
-			}
+
+			article{ font-size: 16px; margin-bottom: 100px; }
 			#maindiv{
 				font-size: 14px;
 				box-sizing: border-box;
@@ -36,7 +25,7 @@
 				min-height: 100%;
 				margin:0px auto;
 				align-content: center;
-				width: 700px;
+				width: 700px !important;
 			}
 
 			.usuario_destacado{
@@ -45,27 +34,46 @@
 			}
 
 			footer{
-				background-color: #5f0b8a;
+				background-color: #828AC5;
 				padding: 20px;
 				position: absolute;
 				bottom: 0;
-				width: 100%;
 				display: flex;
 				justify-content: space-between;
+				width: 100%;
 			}
-			img{ width: 100%; height: auto; }
+
+
+
+			.my_net_icon{
+				width: 20px;
+				height: 20px;
+				background: #f6f6f6;
+				padding: 3px;
+				border: 2px solid #000;
+				margin: 4px;
+			}
 
 			.left{ text-align: left; }
 			.center{ text-align: center; }
 			.right{ text-align: right; }
+			.logo{max-width: 250px; padding: 5px;}
+			.youcont_bg{ background-color: #828AC5;}
 		</style>
 	</head>
 
 	<body>
 		<div id='maindiv'>
 			<header>
-				<img alt="" src="cid:file.jpg" />
-				<img alt="" src="../../../static/img/file.jpg" />
+				<div class="youcont_bg logo">
+					<img alt="" width="250px" src="cid:logo.png"/>
+					<!--<img alt=""  width="250px" src="../../../static/email/img/logo.png" />-->
+				</div>
+
+				<div>
+					<img alt="" class="header_img" src="cid:file.jpg"/>
+					<!--<img alt="" class="header_img" width="700px" src="../../../static/email/img/file.jpg" />-->
+				</div>
 			</header>
 
 			<article>
@@ -85,13 +93,18 @@
 
 			<footer>
 				<div class='left'>
-					<h4><a href="#">facebook</a></h4>
+					<a href="#">
+						<img class="my_net_icon" alt="" src="cid:face.png"/>
+						<!--<img class="my_net_icon" alt="" src="../../../static/email/img/face.png" />-->
+					</a>
+					<a href="#">
+						<img class="my_net_icon" alt="" src="cid:insta.png"/>
+						<!--<img class="my_net_icon" alt="" src="../../../static/email/img/insta.png" />-->
+					</a>
 				</div>
 				<div class='center'>
-						<h4><a href="#">insta</a></h4>
 				</div>
 				<div class='right'>
-						<h4><a href="#">youtube</a></h4>
 				</div>
 			</footer>
 		</div>
