--- a/templates/template.html
+++ b/templates/template.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Your Cont Admin</title>
 		<link rel="stylesheet" href={{ url_for('static', filename='css/bootstrap.css') }}>
+		<link rel="stylesheet" href={{ url_for('static', filename='css/yourcont.css') }}>
 	</head>
 	<body class="container">
 		<header>
