--- a/templates/email/styled/welcome_to_your_cont.html
+++ b/templates/email/styled/welcome_to_your_cont.html
@@ -26,6 +26,7 @@
 				margin:0px auto;
 				align-content: center;
 				width: 700px !important;
+				padding: 20px;
 			}
 
 			.usuario_destacado{
@@ -71,6 +72,7 @@
 				</div>
 
 				<div>
+					<br/><br/>
 					<img alt="" class="header_img" src="cid:file.jpg"/>
 					<!--<img alt="" class="header_img" width="700px" src="../../../static/email/img/file.jpg" />-->
 				</div>
