email de contrato ok

--- a/templates/email/styled/contact_for_contract_data.html
+++ b/templates/email/styled/contact_for_contract_data.html
@@ -5,10 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>{0}</title>
 		<style>
-			html, head{
-				margin: 0;
-				height: 100%;
-			}
+			html, head{ margin: 0; height: 100%; }
 			body{
 				background-color:#f6f6f6;
 				color: #5a5c60;
@@ -18,18 +15,8 @@
 				line-height:1.6;
 				padding:0px;
 				}
-			header{
-				background-color: #f6f6f6;
-				padding: 20px;
-			}
-			.logo{
-			}
-			article{
-				background-color: #f6f6f6;
-				padding: 20px;
-				font-size: 16px;
-				margin-bottom: 100px;
-			}
+
+			article{ font-size: 16px; margin-bottom: 100px; }
 			#maindiv{
 				font-size: 14px;
 				box-sizing: border-box;
@@ -38,7 +25,8 @@
 				min-height: 100%;
 				margin:0px auto;
 				align-content: center;
-				width: 700px !important;;
+				width: 700px !important;
+				padding: 20px;
 			}
 
 			.usuario_destacado{
@@ -47,28 +35,65 @@
 			}
 
 			footer{
-				width: 700px;
-				background-color: #5f0b8a;
+				background-color: #828AC5;
 				padding: 20px;
 				position: absolute;
 				bottom: 0;
-				width: 100%;
 				display: flex;
 				justify-content: space-between;
+				width: 100%;
 			}
-			img{ width: 100%; height: auto; }
+
+			p{text-indent: 1.5em;}
+
+			.my_net_icon{
+				width: 20px;
+				height: 20px;
+				background: #f6f6f6;
+				padding: 3px;
+				border: 2px solid #000;
+				margin: 4px;
+			}
 
 			.left{ text-align: left; }
 			.center{ text-align: center; }
 			.right{ text-align: right; }
+			.logo{width: 720px; padding: 5px;}
+			.youcont_bg{ background-color: #828AC5;}
+
+			div.header_img{
+				width: 210px;
+				height: 235px;
+			}
+			img.header_img {
+			width: 220px;
+			height: 240px;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 80px;
+}
 		</style>
 	</head>
 
 	<body>
 		<div id='maindiv'>
 			<header>
-				<img alt="" src="cid:file.jpg" />
-				<img alt="" src="../../../static/img/file.jpg" />
+				<div class="youcont_bg logo">
+					<img alt="" width="250px" src="cid:logo.png"/>
+					<!--<img alt=""  width="250px" src="../../../static/email/img/logo.png" />-->
+				</div>
+				<h5>DOCUMENTAÇÃO NECESSÁRIA PARA SER ENVIADA A YOURCONT</h5>
+
+				<div class="header_img" >
+
+					<br/>
+					<img alt="" class="header_img" src="cid:document_image.png"/>
+					<!--<img alt="" class="header_img"   src="../../../static/email/img/document_image.png" />-->
+							<br/>
+				</div>
 			</header>
 
 			<article>
@@ -76,27 +101,26 @@
 					Olá <samp class="usuario_destacado">{0}!</samp>
 				</h3>
 
-				<p>Agora você também faz parte do grupo de Sellers Yourcont que escolheram ter mais tempo para gerir o seu negócio e redefinir a maneira como você cuida da saúde da sua empresa.</p>
-
-				<p>Nós também estamos felizes em tê-lo como nosso parceiro e entendemos a importância em ajuda-lo a economizar tempo.</p>
-
-				<p>Os clientes Yourcont têm nosso auxilio para se organizar melhor e de uma maneira pensada para os dias de hoje, mais inteligente, simples e transparente.</p>
-
-				<p>A partir de hoje, todos os dados da sua empresa terão que ser devidamente inseridos e organizados, em seu sistema de gestão, isso permitirá que a Yourcont oriente você para uma melhor tomada de decisão.</p>
+				<p>Abra o arquivo em anexo enquanto estamos em reunião para que eu possa explicar a você a importância desses documentos para nosso trabalho.</p>
 			</article>
 
 
 			<footer>
 				<div class='left'>
-					<h4><a href="#">facebook</a></h4>
+					<a href="#">
+						<img class="my_net_icon" alt="" src="cid:face.png"/>
+						<!--<img class="my_net_icon" alt="" src="../../../static/email/img/face.png" />-->
+					</a>
+					<a href="#">
+						<img class="my_net_icon" alt="" src="cid:insta.png"/>
+						<!--<img class="my_net_icon" alt="" src="../../../static/email/img/insta.png" />-->
+					</a>
 				</div>
 				<div class='center'>
-						<h4><a href="#">insta</a></h4>
 				</div>
 				<div class='right'>
-						<h4><a href="#">youtube</a></h4>
 				</div>
 			</footer>
 		</div>
-</body>		
+</body>
 </html>
