--- a/templates/email/styled/welcome_to_your_cont.html
+++ b/templates/email/styled/welcome_to_your_cont.html
@@ -44,7 +44,7 @@
 				width: 100%;
 			}
 
-
+			p{text-indent: 1.5em;}
 
 			.my_net_icon{
 				width: 20px;
@@ -72,7 +72,7 @@
 				</div>
 
 				<div>
-					<br/><br/>
+					<br/>
 					<img alt="" class="header_img" src="cid:file.jpg"/>
 					<!--<img alt="" class="header_img" width="700px" src="../../../static/email/img/file.jpg" />-->
 				</div>
