--- a/templates/template.html
+++ b/templates/template.html
@@ -11,7 +11,9 @@
 		<header>
 			<nav>
 				<a href="/">Home</a>
-				<a href="/welcome_to_your_cont">Boas Vindas</a>
+				<a href="https://www.yourcont.com.br/">Yourcont</a>
+				<a href="https://www.mailgun.com/">Mailgun</a>
+				<a href="https://www.namecheap.com/">Namecheap</a>
             </nav>
 		</header>
 		{% block conteudo %}
