--- a/templates/contact_for_contract_data.html
+++ b/templates/contact_for_contract_data.html
@@ -15,8 +15,20 @@
             <label for="email">Email</label>
             <input type="email" id="email" name="email" class="form-control">
           </div>
-          <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
         </fieldset>
+
+        <fieldset>
+            <div class="row">
+                {% for file in files_names %}
+                    <div class="form-check form-check-inline col-3">
+                        <input name="files_names" class="form-check-input" type="checkbox" id="{{file['id']}}" value="{{file['value']}}">
+                        <label class="form-check-label" for="{{file['id']}}">{{file['text']}}</label>
+                    </div>
+                {% endfor %}
+            </div>
+        </fieldset>
+
+        <button type="submit" class="btn btn-primary btn-salvar">Enviar</button>
       </form>
     </div>
 {% endblock %}
