--- a/templates/email/contact_for_contract_data.html
+++ b/templates/email/contact_for_contract_data.html
@@ -8,38 +8,48 @@
 	</head>
 
 	<body style="background-color: #f6f6f6; color: #5a5c60; font-family: 'Helvetica Neue',Helvetica, Arial, sans-serif; font-size: 16px; height: 100%; line-height: 1.6; padding: 0px;">
-		<div id="maindiv" style="align-content: center; box-sizing: border-box; font-size: 14px; margin: 0px auto; min-height: 100%; padding-bottom: 1em; position: relative; width: 700px !important;">
-			<header style="background-color: #f6f6f6; padding: 20px;">
-				<img alt src="cid:file.jpg" style="height: auto; width: 100%;">
-				<img alt src="../../../static/img/file.jpg" style="height: auto; width: 100%;">
+		<div id="maindiv" style="align-content: center; box-sizing: border-box; font-size: 14px; margin: 0px auto; min-height: 100%; padding: 20px; padding-bottom: 1em; position: relative; width: 700px !important;">
+			<header>
+				<div class="youcont_bg logo" style="background-color: #828AC5; padding: 5px; width: 720px;">
+					<img alt width="250px" src="cid:logo.png">
+					<!--<img alt=""  width="250px" src="../../../static/email/img/logo.png" />-->
+				</div>
+				<h5>DOCUMENTAÇÃO NECESSÁRIA PARA SER ENVIADA A YOURCONT</h5>
+
+				<div class="header_img" style="height: 235px; width: 210px;">
+
+					<br>
+					<img alt class="header_img" src="cid:document_image.png" style="bottom: 80px; height: 240px; left: 0; margin: auto; position: absolute; right: 0; top: 0; width: 220px;">
+					<!--<img alt="" class="header_img"   src="../../../static/email/img/document_image.png" />-->
+							<br>
+				</div>
 			</header>
 
-			<article style="background-color: #f6f6f6; font-size: 16px; margin-bottom: 100px; padding: 20px;">
+			<article style="font-size: 16px; margin-bottom: 100px;">
 				<h3>
 					Olá <samp class="usuario_destacado" style="color: #000; font-weight: bolder;">{0}!</samp>
 				</h3>
 
-				<p>Agora você também faz parte do grupo de Sellers Yourcont que escolheram ter mais tempo para gerir o seu negócio e redefinir a maneira como você cuida da saúde da sua empresa.</p>
-
-				<p>Nós também estamos felizes em tê-lo como nosso parceiro e entendemos a importância em ajuda-lo a economizar tempo.</p>
-
-				<p>Os clientes Yourcont têm nosso auxilio para se organizar melhor e de uma maneira pensada para os dias de hoje, mais inteligente, simples e transparente.</p>
-
-				<p>A partir de hoje, todos os dados da sua empresa terão que ser devidamente inseridos e organizados, em seu sistema de gestão, isso permitirá que a Yourcont oriente você para uma melhor tomada de decisão.</p>
+				<p style="text-indent: 1.5em;">Abra o arquivo em anexo enquanto estamos em reunião para que eu possa explicar a você a importância desses documentos para nosso trabalho.</p>
 			</article>
 
 
-			<footer style="background-color: #5f0b8a; bottom: 0; display: flex; justify-content: space-between; padding: 20px; position: absolute; width: 100%;">
+			<footer style="background-color: #828AC5; bottom: 0; display: flex; justify-content: space-between; padding: 20px; position: absolute; width: 100%;">
 				<div class="left" style="text-align: left;">
-					<h4><a href="#">facebook</a></h4>
+					<a href="#">
+						<img class="my_net_icon" alt src="cid:face.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
+						<!--<img class="my_net_icon" alt="" src="../../../static/email/img/face.png" />-->
+					</a>
+					<a href="#">
+						<img class="my_net_icon" alt src="cid:insta.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
+						<!--<img class="my_net_icon" alt="" src="../../../static/email/img/insta.png" />-->
+					</a>
 				</div>
 				<div class="center" style="text-align: center;">
-						<h4><a href="#">insta</a></h4>
 				</div>
 				<div class="right" style="text-align: right;">
-						<h4><a href="#">youtube</a></h4>
 				</div>
 			</footer>
 		</div>
-</body>		
+</body>
 </html>
