--- a/templates/email/welcome_to_your_cont.html
+++ b/templates/email/welcome_to_your_cont.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body style="background-color: #f6f6f6; color: #5a5c60; font-family: 'Helvetica Neue',Helvetica, Arial, sans-serif; font-size: 16px; height: 100%; line-height: 1.6; padding: 0px;">
-		<div id="maindiv" style="align-content: center; box-sizing: border-box; font-size: 14px; margin: 0px auto; min-height: 100%; padding-bottom: 1em; position: relative; width: 700px !important;">
+		<div id="maindiv" style="align-content: center; box-sizing: border-box; font-size: 14px; margin: 0px auto; min-height: 100%; padding: 20px; padding-bottom: 1em; position: relative; width: 700px !important;">
 			<header>
 				<div class="youcont_bg logo" style="background-color: #828AC5; max-width: 250px; padding: 5px;">
 					<img alt width="250px" src="cid:logo.png">
@@ -16,6 +16,7 @@
 				</div>
 
 				<div>
+					<br>
 					<img alt class="header_img" src="cid:file.jpg">
 					<!--<img alt="" class="header_img" width="700px" src="../../../static/email/img/file.jpg" />-->
 				</div>
@@ -26,13 +27,13 @@
 					Olá <samp class="usuario_destacado" style="color: #000; font-weight: bolder;">{0}!</samp>
 				</h3>
 
-				<p>Agora você também faz parte do grupo de Sellers Yourcont que escolheram ter mais tempo para gerir o seu negócio e redefinir a maneira como você cuida da saúde da sua empresa.</p>
+				<p style="text-indent: 1.5em;">Agora você também faz parte do grupo de Sellers Yourcont que escolheram ter mais tempo para gerir o seu negócio e redefinir a maneira como você cuida da saúde da sua empresa.</p>
 
-				<p>Nós também estamos felizes em tê-lo como nosso parceiro e entendemos a importância em ajuda-lo a economizar tempo.</p>
+				<p style="text-indent: 1.5em;">Nós também estamos felizes em tê-lo como nosso parceiro e entendemos a importância em ajuda-lo a economizar tempo.</p>
 
-				<p>Os clientes Yourcont têm nosso auxilio para se organizar melhor e de uma maneira pensada para os dias de hoje, mais inteligente, simples e transparente.</p>
+				<p style="text-indent: 1.5em;">Os clientes Yourcont têm nosso auxilio para se organizar melhor e de uma maneira pensada para os dias de hoje, mais inteligente, simples e transparente.</p>
 
-				<p>A partir de hoje, todos os dados da sua empresa terão que ser devidamente inseridos e organizados, em seu sistema de gestão, isso permitirá que a Yourcont oriente você para uma melhor tomada de decisão.</p>
+				<p style="text-indent: 1.5em;">A partir de hoje, todos os dados da sua empresa terão que ser devidamente inseridos e organizados, em seu sistema de gestão, isso permitirá que a Yourcont oriente você para uma melhor tomada de decisão.</p>
 			</article>
 
 
