--- a/templates/welcome_to_your_cont.html
+++ b/templates/welcome_to_your_cont.html
@@ -14,7 +14,7 @@
             <label for="email">Email</label>
             <input type="email" id="email" name="email" class="form-control">
           </div>
-          <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+          <button type="submit" class="btn btn-primary btn-salvar">Enviar</button>
         </fieldset>
       </form>
     </div>
