--- a/templates/email/meeting_confirmation_email.html
+++ b/templates/email/meeting_confirmation_email.html
@@ -16,34 +16,20 @@
            ">
 
         <table align="center" border="0" bgcolor="#f6f6f6" cellpadding="0" cellspacing="0" width="750" style="border-collapse: collapse; ">
-             <tr>
-                <td align="center" bgcolor="#f6f6f6">
-                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>-->
-                    <img alt="logo" width="100%" height="auto" style="display: block;" src="../../../static/email/img/logo_slim.png">
+            <tr>
+                <td align="center" bgcolor="#f6f6f6" style="padding: 0px 0 0px 0;">
+                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_land.png"/>-->
+                    <img alt="logo" width="100%" height="auto" style="display: block;" src="../../../static/email/img/logo_land.png">
                 </td>
             </tr>
-			<tr>
-				<td>
-					<br>
-				</td>
-			</tr>
-			<tr style="margin-top: 10px;">
-				<td>
-					<!--<img alt="" class="header_img" src="cid:file.jpg"/>-->
-					<img alt class="header_img" width="100%" src="../../../static/email/img/service-contract.png">
-				</td>
-			</tr>
 
             <tr>
                 <td bgcolor="#f6f6f6" style="padding: 10px 15px;">
                     <h3>
 					Olá <samp class="usuario_destacado" style="color: #000; font-weight: bolder;">{0}!</samp>
 				</h3>
-                <p style="text-indent: 1.5em;">Agora que você já escolheu a Yourcont como sua parceira em sua jornada empreendedora, seu próximo passo dessa conquista é nos responder esse e-mail no prazo de 2 dias úteis para seguirmos nosso cronograma por aqui.
-				</p>
-                    <p style="text-indent: 1.5em;">
-						Assinar o nosso contrato de prestação de serviços contábeis que está em anexo nesse e-mail, e nos devolve-lo digitalizado junto com seu RG e CPF (tirado no período de 2 anos) ou CNH (dentro da validade).
-					</p>
+                <p style="text-indent: 1.5em;">Te aguardamos as {1} no dia {2} !</p>
+                    <p style="text-indent: 1.5em;">Clica nesse  <a href="{3}">link</a> para entrar na sala de reunião.</p>
                 </td>
             </tr>
             <tr>
@@ -56,6 +42,10 @@
                     <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
                         <!--<img class="my_net_icon" alt src="cid:insta.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">-->
                         <img width="20" height="20" alt src="../../../static/email/img/insta.png">
+                    </a>
+                    <a href="{3}" style="margin: 5px; padding: 5px; text-decoration:none;">
+                        <!--<img class="my_net_icon" alt src="cid:appear-in.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">-->
+                        <img width="20" height="20" alt="link to appear" src="../../../static/email/img/appear-in.png">
                     </a>
                 </td>
             </tr>
