--- a/templates/email/sending_contract.html
+++ b/templates/email/sending_contract.html
@@ -18,8 +18,8 @@
         <table align="center" border="0" bgcolor="#f6f6f6" cellpadding="0" cellspacing="0" width="750" style="border-collapse: collapse; ">
             <tr>
                 <td align="center" bgcolor="#f6f6f6">
-                    <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png">
-                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="../../../static/email/img/logo_slim.png"/>-->
+                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>-->
+                    <img alt="logo" width="100%" height="auto" style="display: block;" src="../../../static/email/img/logo_slim.png">
                 </td>
             </tr>
 			<tr>
@@ -29,8 +29,8 @@
 			</tr>
 			<tr style="margin-top: 10px;">
 				<td>
-					<img alt class="header_img" width="100%" src="cid:file.jpg">
-					<!--<img alt="" class="header_img" width="100%" src="../../../static/email/img/file.jpg" />-->
+					<!--<img alt="" class="header_img" src="cid:file.jpg"/>-->
+					<img alt class="header_img" width="100%" src="../../../static/email/img/file.jpg">
 				</td>
 			</tr>
 
@@ -49,13 +49,13 @@
             <tr>
                 <td style="background-color: #828AC5; padding: 5px 5px 5px 5px;">
                     <a href="https://www.facebook.com" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <img width="20" height="20" alt src="cid:face.png">
-                        <!--<img width="20" height="20" alt="" src="../../../static/email/img/face.png" />-->
+                        <!--<img class="my_net_icon" alt src="cid:face.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">-->
+                        <img width="20" height="20" alt src="../../../static/email/img/face.png">
                     </a>
 
                     <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <img width="20" height="20" alt src="cid:insta.png">
-                        <!--<img width="20" height="20"  alt="" src="../../../static/email/img/insta.png" />-->
+                        <!--<img class="my_net_icon" alt src="cid:insta.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">-->
+                        <img width="20" height="20" alt src="../../../static/email/img/insta.png">
                     </a>
                 </td>
             </tr>
