--- a/templates/email/styled/welcome_to_your_cont.html
+++ b/templates/email/styled/welcome_to_your_cont.html
@@ -1,114 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta name="viewport" content="width=device-width">
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>{0}</title>
-		<style>
-			html, head{ margin: 0; height: 100%; }
-			body{
-				background-color:#f6f6f6;
-				color: #5a5c60;
-				font-family:"Helvetica Neue",Helvetica, Arial, sans-serif;
-				font-size:16px;
-				height:100%;
-				line-height:1.6;
-				padding:0px;
-				}
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+    <body style="
+            margin: 0;
+            padding: 0;
+            background: #f6f6f6;
+            color: #153643;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            line-height: 20px;
+           ">
 
-			article{ font-size: 16px; margin-bottom: 100px; }
-			#maindiv{
-				font-size: 14px;
-				box-sizing: border-box;
-				position: relative;
-				padding-bottom: 1em;
-				min-height: 100%;
-				margin:0px auto;
-				align-content: center;
-				width: 700px !important;
-				padding: 20px;
-			}
+        <table
+                align="center" border="0" bgcolor="#f6f6f6"
+                cellpadding="0" cellspacing="0" width="750"
+                style="border-collapse: collapse; ">
+            <tr>
+                <td align="center" bgcolor="#f6f6f6">
+                    <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>
+                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="../../../static/email/img/logo_slim.png"/>-->
+                </td>
+            </tr>
+			<tr>
+				<td>
+					<br>
+				</td>
+			</tr>
+			<tr style="margin-top: 10px;">
+				<td>
+					<img alt="" class="header_img" width="100%" src="cid:file.jpg"/>
+					<!--<img alt="" class="header_img" width="100%" src="../../../static/email/img/file.jpg" />-->
+				</td>
+			</tr>
 
-			.usuario_destacado{
-				font-weight: bolder;
-				color: #000;
-			}
+            <tr>
+                <td bgcolor="#f6f6f6" style="padding: 10px 15px;">
+                    <h3>
+						Olá <samp class="usuario_destacado" style="color: #000; font-weight: bolder;">{0}!</samp>
+					</h3>
+					<p style="text-indent: 1.5em;">Agora você também faz parte do grupo de Sellers Yourcont que escolheram ter mais tempo para gerir o seu negócio e redefinir a maneira como você cuida da saúde da sua empresa.</p>
+					<p style="text-indent: 1.5em;">Nós também estamos felizes em tê-lo como nosso parceiro e entendemos a importância em ajuda-lo a economizar tempo.</p>
+					<p style="text-indent: 1.5em;">Os clientes Yourcont têm nosso auxilio para se organizar melhor e de uma maneira pensada para os dias de hoje, mais inteligente, simples e transparente.</p>
+					<p style="text-indent: 1.5em;">A partir de hoje, todos os dados da sua empresa terão que ser devidamente inseridos e organizados, em seu sistema de gestão, isso permitirá que a Yourcont oriente você para uma melhor tomada de decisão.</p>
 
-			footer{
-				background-color: #828AC5;
-				padding: 20px;
-				position: absolute;
-				bottom: 0;
-				display: flex;
-				justify-content: space-between;
-				width: 100%;
-			}
+                </td>
+            </tr>
+            <tr>
+                <td style="background-color: #828AC5; padding: 5px 5px 5px 5px;">
+                    <a href="https://www.facebook.com" style="margin: 5px; padding: 5px; text-decoration:none;">
+                        <img width="20" height="20" alt="" src="cid:face.png" />
+                        <!--<img width="20" height="20" alt="" src="../../../static/email/img/face.png" />-->
+                    </a>
 
-			p{text-indent: 1.5em;}
-
-			.my_net_icon{
-				width: 20px;
-				height: 20px;
-				background: #f6f6f6;
-				padding: 3px;
-				border: 2px solid #000;
-				margin: 4px;
-			}
-
-			.left{ text-align: left; }
-			.center{ text-align: center; }
-			.right{ text-align: right; }
-			.logo{max-width: 250px; padding: 5px;}
-			.youcont_bg{ background-color: #828AC5;}
-		</style>
-	</head>
-
-	<body>
-		<div id='maindiv'>
-			<header>
-				<div class="youcont_bg logo">
-					<img alt="" width="250px" src="cid:logo.png"/>
-					<!--<img alt=""  width="250px" src="../../../static/email/img/logo.png" />-->
-				</div>
-
-				<div>
-					<br/>
-					<img alt="" class="header_img" src="cid:file.jpg"/>
-					<!--<img alt="" class="header_img" width="700px" src="../../../static/email/img/file.jpg" />-->
-				</div>
-			</header>
-
-			<article>
-				<h3>
-					Olá <samp class="usuario_destacado">{0}!</samp>
-				</h3>
-
-				<p>Agora você também faz parte do grupo de Sellers Yourcont que escolheram ter mais tempo para gerir o seu negócio e redefinir a maneira como você cuida da saúde da sua empresa.</p>
-
-				<p>Nós também estamos felizes em tê-lo como nosso parceiro e entendemos a importância em ajuda-lo a economizar tempo.</p>
-
-				<p>Os clientes Yourcont têm nosso auxilio para se organizar melhor e de uma maneira pensada para os dias de hoje, mais inteligente, simples e transparente.</p>
-
-				<p>A partir de hoje, todos os dados da sua empresa terão que ser devidamente inseridos e organizados, em seu sistema de gestão, isso permitirá que a Yourcont oriente você para uma melhor tomada de decisão.</p>
-			</article>
-
-
-			<footer>
-				<div class='left'>
-					<a href="#">
-						<img class="my_net_icon" alt="" src="cid:face.png"/>
-						<!--<img class="my_net_icon" alt="" src="../../../static/email/img/face.png" />-->
-					</a>
-					<a href="#">
-						<img class="my_net_icon" alt="" src="cid:insta.png"/>
-						<!--<img class="my_net_icon" alt="" src="../../../static/email/img/insta.png" />-->
-					</a>
-				</div>
-				<div class='center'>
-				</div>
-				<div class='right'>
-				</div>
-			</footer>
-		</div>
-</body>		
+                    <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
+                        <img width="20" height="20"  alt="" src="cid:insta.png" />
+                        <!--<img width="20" height="20"  alt="" src="../../../static/email/img/insta.png" />-->
+                    </a>
+                </td>
+            </tr>
+        </table>
+    </body>
 </html>
