--- a/templates/email/contact_for_contract_data.html
+++ b/templates/email/contact_for_contract_data.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             background: #f6f6f6;
-            color: #153643;
+            color: #303030;
             font-family: Arial, sans-serif;
             font-size: 16px;
             line-height: 20px;
@@ -32,7 +32,7 @@
 			</tr>
 			<tr style="margin-top: 10px;">
 				<td>
-					<img alt="" class="header_img" src="cid:file.jpg"/>
+					<img alt="" class="header_img" src="cid:service-contract.png"/>
 					<!--<img alt="" class="header_img" width="100%" src="../../../static/email/img/service-contract.png" />-->
 				</td>
 			</tr>
