--- a/templates/email/welcome_to_your_cont.html
+++ b/templates/email/welcome_to_your_cont.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             background: #f6f6f6;
-            color: #153643;
+            color: #303030;
             font-family: Arial, sans-serif;
             font-size: 16px;
             line-height: 20px;
@@ -18,7 +18,7 @@
         <table
                 align="center" border="0" bgcolor="#f6f6f6"
                 cellpadding="0" cellspacing="0" width="750"
-                style="border-collapse: collapse; ">
+                style="border-collapse: collapse; color: #303030; ">
             <tr>
                 <td align="center" bgcolor="#f6f6f6">
                     <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>
