--- a/templates/email/welcome_to_your_cont.html
+++ b/templates/email/welcome_to_your_cont.html
@@ -30,10 +30,10 @@
 					<br>
 				</td>
 			</tr>
-			<tr style="margin-top: 10px;">
+			<tr>
 				<td>
-					<img alt="" class="header_img" width="100%" src="cid:file.jpg"/>
-					<!--<img alt="" class="header_img" width="100%" src="../../../static/email/img/file.jpg" />-->
+					<img alt="" class="header_img" width="100%" src="cid:main_picture_welcome.jpg"/>
+					<!--<img alt="" class="header_img" width="100%" src="../../../static/email/img/main_picture_welcome.jpg" />-->
 				</td>
 			</tr>
 
@@ -52,13 +52,13 @@
             <tr>
                 <td style="background-color: #828AC5; padding: 5px 5px 5px 5px;">
                     <a href="https://www.facebook.com" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <img width="20" height="20" alt="" src="cid:face.png" />
-                        <!--<img width="20" height="20" alt="" src="../../../static/email/img/face.png" />-->
+                        <img width="20" height="20" alt="" src="cid:footer_icon_facebook.png" />
+                        <!--<img width="20" height="20" alt="" src="../../../static/email/img/footer_icon_facebook.png" />-->
                     </a>
 
                     <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <img width="20" height="20"  alt="" src="cid:insta.png" />
-                        <!--<img width="20" height="20"  alt="" src="../../../static/email/img/insta.png" />-->
+                        <img width="20" height="20"  alt="" src="cid:footer_icon_instagram.png" />
+                        <!--<img width="20" height="20"  alt="" src="../../../static/email/img/footer_icon_instagram.png" />-->
                     </a>
                 </td>
             </tr>
