remove space between log and main image

--- a/templates/email/contact_for_contract_data.html
+++ b/templates/email/contact_for_contract_data.html
@@ -21,19 +21,14 @@
                 style="border-collapse: collapse; ">
              <tr>
                 <td align="center" bgcolor="#f6f6f6">
-                    <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>
-                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="../../../static/email/img/logo_slim.png"/>-->
+                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>-->
+                    <img alt="logo" width="100%" height="auto" style="display: block;" src="../../static/email/img/logo_slim.png"/>
                 </td>
             </tr>
 			<tr>
 				<td>
-					<br>
-				</td>
-			</tr>
-			<tr style="margin-top: 10px;">
-				<td>
-					<img alt="" class="header_img" src="cid:main_picture_contract.png"/>
-					<!--<img alt="" class="header_img" width="100%" src="../../../static/email/img/main_picture_contract.png" />-->
+					<!--<img alt="" class="header_img" src="cid:main_picture_contract.png"/>-->
+					<img alt="" class="header_img" width="100%" src="../../static/email/img/main_picture_contract.png" />
 				</td>
 			</tr>
 
@@ -52,13 +47,13 @@
             <tr>
                 <td style="background-color: #828AC5; padding: 5px 5px 5px 5px;">
                     <a href="https://www.facebook.com" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <img class="my_net_icon" alt src="cid:footer_icon_facebook.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
-                        <!--<img width="20" height="20" alt="" src="../../../static/email/img/footer_icon_facebook.png" />-->
+                        <!--<img class="my_net_icon" alt src="cid:footer_icon_facebook.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">-->
+                        <img width="20" height="20" alt="" src="../../static/email/img/footer_icon_facebook.png" />
                     </a>
 
                     <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <img class="my_net_icon" alt src="cid:footer_icon_instagram.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
-                        <!--<img width="20" height="20"  alt="" src="../../../static/email/img/footer_icon_instagram.png" />-->
+                        <!--<img class="my_net_icon" alt src="cid:footer_icon_instagram.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">-->
+                        <img width="20" height="20"  alt="" src="../../static/email/img/footer_icon_instagram.png" />
                     </a>
                 </td>
             </tr>
