--- a/templates/email/welcome_to_your_cont.html
+++ b/templates/email/welcome_to_your_cont.html
@@ -21,19 +21,14 @@
                 style="border-collapse: collapse; color: #303030; ">
             <tr>
                 <td align="center" bgcolor="#f6f6f6">
-                    <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>
-                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="../../../static/email/img/logo_slim.png"/>-->
+                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>-->
+                    <img alt="logo" width="100%" height="auto" style="display: block;" src="../../static/email/img/logo_slim.png"/>
                 </td>
             </tr>
 			<tr>
 				<td>
-					<br>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<img alt="" class="header_img" width="100%" src="cid:main_picture_welcome.jpg"/>
-					<!--<img alt="" class="header_img" width="100%" src="../../../static/email/img/main_picture_welcome.jpg" />-->
+					<!--<img alt="" class="header_img" width="100%" src="cid:main_picture_welcome.jpg"/>-->
+					<img alt="" class="header_img" width="100%" src="../../static/email/img/main_picture_welcome.jpg" />
 				</td>
 			</tr>
 
@@ -52,13 +47,13 @@
             <tr>
                 <td style="background-color: #828AC5; padding: 5px 5px 5px 5px;">
                     <a href="https://www.facebook.com" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <img width="20" height="20" alt="" src="cid:footer_icon_facebook.png" />
-                        <!--<img width="20" height="20" alt="" src="../../../static/email/img/footer_icon_facebook.png" />-->
+                        <!--<img width="20" height="20" alt="" src="cid:footer_icon_facebook.png" />-->
+                        <img width="20" height="20" alt="" src="../../static/email/img/footer_icon_facebook.png" />
                     </a>
 
                     <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <img width="20" height="20"  alt="" src="cid:footer_icon_instagram.png" />
-                        <!--<img width="20" height="20"  alt="" src="../../../static/email/img/footer_icon_instagram.png" />-->
+                        <!--<img width="20" height="20"  alt="" src="cid:footer_icon_instagram.png" />-->
+                        <img width="20" height="20"  alt="" src="../../static/email/img/footer_icon_instagram.png" />
                     </a>
                 </td>
             </tr>
