remove space between log and main image

--- a/templates/email/contact_for_contract_data.html
+++ b/templates/email/contact_for_contract_data.html
@@ -45,7 +45,8 @@
                 <p style="text-indent: 1.5em;">Agora que você já escolheu a Yourcont como sua parceira em sua jornada empreendedora, seu próximo passo dessa conquista é nos responder esse e-mail no prazo de 2 dias úteis para seguirmos nosso cronograma por aqui.
 				</p>
                     <p style="text-indent: 1.5em;">
-						Assinar o nosso contrato de prestação de serviços contábeis que está em anexo nesse e-mail, e nos devolve-lo digitalizado junto com seu RG e CPF (tirado no período de 2 anos) ou CNH (dentro da validade).
+                        Assinar o nosso contrato de prestação de serviços contábeis que está em anexo nesse e-mail, e nos devolve-lo digitalizado junto com seu RG e CPF (tirado no período de 2 anos) ou CNH (dentro da validade) no email
+                        <a href="mailto:atendimento@yourcont.com.br?Subject=Contrado Assinado" target="_top">atendimento@yourcont.com.br</a>, com o assunto: <b>Contrato Assinado</b>.
 					</p>
                 </td>
             </tr>
