--- a/templates/email/contact_for_contract_data.html
+++ b/templates/email/contact_for_contract_data.html
@@ -5,20 +5,8 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-    <body style="
-            margin: 0;
-            padding: 0;
-            background: #f6f6f6;
-            color: #303030;
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-            line-height: 20px;
-           ">
-
-        <table
-                align="center" border="0" bgcolor="#f6f6f6"
-                cellpadding="0" cellspacing="0" width="750"
-                style="border-collapse: collapse; ">
+    <body style=" margin: 0; padding: 0; background: #f6f6f6; color: #303030; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+        <table  align="center" border="0" bgcolor="#f6f6f6" cellpadding="0" cellspacing="0" width="750"  style="border-collapse: collapse; ">
              <tr>
                 <td align="center" bgcolor="#f6f6f6">
                     <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>-->
@@ -34,14 +22,19 @@
 
             <tr>
                 <td bgcolor="#f6f6f6" style="padding: 10px 15px;">
-                    <h3>
-					Olá <samp class="usuario_destacado" style="color: #000; font-weight: bolder;">{0}!</samp>
-				</h3>
-                <p style="text-indent: 1.5em;">Agora que você já escolheu a Yourcont como sua parceira em sua jornada empreendedora, seu próximo passo dessa conquista é nos responder esse e-mail no prazo de 2 dias úteis para seguirmos nosso cronograma por aqui.
-				</p>
+                    <h3>Olá <samp style="color: #000; font-weight: bolder;">{0}!</samp></h3>
+
                     <p style="text-indent: 1.5em;">
-						Assinar o nosso contrato de prestação de serviços contábeis que está em anexo nesse e-mail, e nos devolve-lo digitalizado junto com seu RG e CPF (tirado no período de 2 anos) ou CNH (dentro da validade).
-					</p>
+                        Agora que você já escolheu a Yourcont como sua parceira em sua jornada empreendedora, 
+                        seu próximo passo dessa conquista é nos responder esse e-mail no prazo de 2 dias úteis
+                        para seguirmos nosso cronograma por aqui.
+                    </p>
+
+                    <p style="text-indent: 1.5em;">
+                        Assinar o nosso contrato de prestação de serviços contábeis que está em anexo nesse e-mail,
+                        e nos devolve-lo digitalizado junto com seu RG e CPF (tirado no período de 2 anos) ou CNH
+                        (dentro da validade).
+                    </p>
                 </td>
             </tr>
             <tr>
