--- a/templates/email/welcome_to_your_cont.html
+++ b/templates/email/welcome_to_your_cont.html
@@ -35,7 +35,7 @@
             <tr>
                 <td bgcolor="#f6f6f6" style="padding: 10px 15px;">
                     <h3>
-						Olá <samp class="usuario_destacado" style="color: #000; font-weight: bolder;">{0}!</samp>
+						Olá <samp style="color: #000; font-weight: bolder;">{0}!</samp>
 					</h3>
 					<p style="text-indent: 1.5em;">Agora você também faz parte do grupo de Sellers Yourcont que escolheram ter mais tempo para gerir o seu negócio e redefinir a maneira como você cuida da saúde da sua empresa.</p>
 					<p style="text-indent: 1.5em;">Nós também estamos felizes em tê-lo como nosso parceiro e entendemos a importância em ajuda-lo a economizar tempo.</p>
