--- a/templates/email/contact_for_contract_data.html
+++ b/templates/email/contact_for_contract_data.html
@@ -9,14 +9,14 @@
         <table  align="center" border="0" bgcolor="#f6f6f6" cellpadding="0" cellspacing="0" width="750"  style="border-collapse: collapse; ">
              <tr>
                 <td align="center" bgcolor="#f6f6f6">
-                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>-->
-                    <img alt="logo" width="100%" height="auto" style="display: block;" src="../../static/email/img/logo_slim.png"/>
+                    <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>
+                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="../../static/email/img/logo_slim.png"/>-->
                 </td>
             </tr>
 			<tr>
 				<td>
-					<!--<img alt="" class="header_img" src="cid:main_picture_contract.png"/>-->
-					<img alt="" class="header_img" width="100%" src="../../static/email/img/main_picture_contract.png" />
+					<img alt="" class="header_img" src="cid:main_picture_contract.png"/>
+					<!--<img alt="" class="header_img" width="100%" src="../../static/email/img/main_picture_contract.png" />-->
 				</td>
 			</tr>
 
@@ -29,24 +29,42 @@
                         seu próximo passo dessa conquista é nos responder esse e-mail no prazo de 2 dias úteis
                         para seguirmos nosso cronograma por aqui.
                     </p>
-
                     <p style="text-indent: 1.5em;">
-                        Assinar o nosso contrato de prestação de serviços contábeis que está em anexo nesse e-mail,
-                        e nos devolve-lo digitalizado junto com seu RG e CPF (tirado no período de 2 anos) ou CNH
-                        (dentro da validade).
+                        Então siga com atenção os 3 passos abaixo:
+                    </p>
+                    <p style="text-indent: 1.5em;">
+                        <ol>
+                            <li>
+                                Assinatura do responsável pela empresa no contrato de prestação de serviços
+                                contábeis que está em anexo e sócios caso houver.(Assinar igual está nos
+                                documentos pessoais)
+                            </li>
+                            <li>
+                                Digitalizar  RG e CPF (tirado no período de 2 anos) ou CNH (dentro da validade)
+                                e do sócio caso houver.
+                            </li>
+                            <li>
+                                Enviar o item 1 e 2 no e-mail:
+                                <a href="mailto:atendimento@yourcont.com.br?Subject=Contrado Assinado" target="_top">
+                                    atendimento@yourcont.com.br
+                                </a> com o titulo: <b>Contrato Assinado</b>.
+
+
+                            </li>
+                        </ol>
                     </p>
                 </td>
             </tr>
             <tr>
                 <td style="background-color: #828AC5; padding: 5px 5px 5px 5px;">
                     <a href="https://www.facebook.com" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <!--<img class="my_net_icon" alt src="cid:footer_icon_facebook.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">-->
-                        <img width="20" height="20" alt="" src="../../static/email/img/footer_icon_facebook.png" />
+                        <img class="my_net_icon" alt src="cid:footer_icon_facebook.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
+                        <!--<img width="20" height="20" alt="" src="../../static/email/img/footer_icon_facebook.png" />-->
                     </a>
 
                     <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <!--<img class="my_net_icon" alt src="cid:footer_icon_instagram.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">-->
-                        <img width="20" height="20"  alt="" src="../../static/email/img/footer_icon_instagram.png" />
+                        <img class="my_net_icon" alt src="cid:footer_icon_instagram.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
+                        <!--<img width="20" height="20"  alt="" src="../../static/email/img/footer_icon_instagram.png" />-->
                     </a>
                 </td>
             </tr>
