--- a/templates/email/meeting_solicitation_email.html
+++ b/templates/email/meeting_solicitation_email.html
@@ -36,10 +36,11 @@
             <tr>
                 <td bgcolor="#f6f6f6" style="padding: 10px 15px;">
                     <h3>
-					Olá <samp style="color: #000; font-weight: bolder;">{0}!</samp>
-				</h3>
-                <p style="text-indent: 1.5em;">Podemos agenda no dia {1} as {2} ou  {3}</p>
-                    <p style="text-indent: 1.5em;">Envie um email há {4} para que possamos lhe enviar o link para nossa reunião online.</p>
+					    Olá <samp style="color: #000; font-weight: bolder;">{0}!</samp>
+				    </h3>
+                    <p style="text-indent: 1.5em;">Podemos agenda no dia {date} as {hour1} ou  {hour2}</p>
+                    <p style="text-indent: 1.5em;">Envie um email a <a href="mailto:atendimento@yourcont.com.br?Subject=Confirmação de data" target="_top"> atendimento@yourcont.com.br </a> com o titulo: <b>Confirmação de data</b> para a confirmação de nossa reunião online.</p>
+                    <p>Link da reunião {link}</p>
                 </td>
             </tr>
             <tr>
@@ -54,9 +55,9 @@
                         <img width="20" height="20"  alt="" src="../../static/email/img/footer_icon_instagram.png" />
                     </a>
 
-                    <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
-                        <img class="my_net_icon" alt src="cid:footer_icon_instagram.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
-                        <img width="20" height="20"  alt="" src="../../static/email/img/footer_icon_instagram.png" />
+                    <a href="https://{link}" style="margin: 5px; padding: 5px; text-decoration:none;">
+                        <img class="my_net_icon" alt src="cid:footer_icon_appear-in.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
+                        <img width="20" height="20"  alt="" src="../../static/email/img/footer_icon_appear-in.png" />
                     </a>
                 </td>
             </tr>
