change html template to prod

--- a/templates/email/meeting_solicitation_email.html
+++ b/templates/email/meeting_solicitation_email.html
@@ -22,14 +22,14 @@
             <tr>
                 <td align="center" bgcolor="#f6f6f6" style="padding: 0px 0 0px 0;">
                     <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>
-                    <img alt="logo" width="100%" height="auto" style="display: block;" src="../../static/email/img/logo_slim.png"/>
+                    <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>
                 </td>
             </tr>
 
             <tr>
                 <td>
                     <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:main_picture_meeting.png"/>
-                    <img alt="logo" width="100%" height="auto" style="display: block;" src="../../static/email/img/main_picture_meeting.png"/>
+                    <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:main_picture_meeting.png"/>
                 </td>
             </tr>
 
@@ -47,17 +47,17 @@
                 <td style="background-color: #828AC5; padding: 5px 5px 5px 5px;">
                     <a href="https://www.facebook.com" style="margin: 5px; padding: 5px; text-decoration:none;">
                         <img class="my_net_icon" alt src="cid:footer_icon_facebook.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
-                        <img width="20" height="20" alt="" src="../../static/email/img/footer_icon_facebook.png" />
+                        <img width="20" height="20" alt="" src="cid:footer_icon_facebook.png" />
                     </a>
 
                     <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
                         <img class="my_net_icon" alt src="cid:footer_icon_instagram.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
-                        <img width="20" height="20"  alt="" src="../../static/email/img/footer_icon_instagram.png" />
+                        <img width="20" height="20"  alt="" src="cid:footer_icon_instagram.png" />
                     </a>
 
                     <a href="https://{link}" style="margin: 5px; padding: 5px; text-decoration:none;">
                         <img class="my_net_icon" alt src="cid:footer_icon_appear-in.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
-                        <img width="20" height="20"  alt="" src="../../static/email/img/footer_icon_appear-in.png" />
+                        <img width="20" height="20"  alt="" src="cid:footer_icon_appear-in.png" />
                     </a>
                 </td>
             </tr>
